--- a/public/css/scss/style.scss
+++ b/public/css/scss/style.scss
@@ -68,6 +68,7 @@ body.uc_page{
         max-width: 100%;
         padding:0;
         padding-top: 80px;
+        padding-bottom: 50px;
     }
     .title{
         font-size: 30px;
@@ -119,8 +120,14 @@ body.uc_page{
     .btn_submit:hover{
         opacity: .7;
     }
+    .alert.alert-danger{
+        padding: 4px 10px;
+        font-size: 14px;
+        margin: 7px 0;
+    }
 }
 .thankyou_page{
+    
     .appoinment_page_container{
         display: block;
         h2.title{
