--- a/public/style.css
+++ b/public/style.css
@@ -57,7 +57,8 @@ body.uc_page {
     width: 600px;
     max-width: 100%;
     padding: 0;
-    padding-top: 80px; }
+    padding-top: 80px;
+    padding-bottom: 50px; }
   .appoitnment_page .title {
     font-size: 30px;
     margin: 0;
@@ -101,6 +102,10 @@ body.uc_page {
     transition: all .5s; }
   .appoitnment_page .btn_submit:hover {
     opacity: .7; }
+  .appoitnment_page .alert.alert-danger {
+    padding: 4px 10px;
+    font-size: 14px;
+    margin: 7px 0; }
 
 .thankyou_page .appoinment_page_container {
   display: block; }
