--- a/public/style.css
+++ b/public/style.css
@@ -1,93 +1,122 @@
-html, body {
-  margin: 0;
-  padding: 0;
-  display: block;
-  font-family: 'Montserrat', sans-serif; }
+html,
+body {
+    margin: 0;
+    padding: 0;
+    display: block;
+    font-family: 'Roboto', sans-serif;
+}
 
 body.uc_page {
-  background: url("images/bg.jpg");
-  background-repeat: repeat;
-  background-size: auto;
-  background-position: top center;
-  background-repeat: no-repeat;
-  background-size: cover; }
+    background: url("images/bg.jpg");
+    background-repeat: repeat;
+    background-size: auto;
+    background-position: top center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
 
 .uc_page .logo {
-  width: 170px;
-  margin: 0; }
+    width: 170px;
+    margin: 0;
+}
+
 .uc_page .contents {
-  text-align: center;
-  margin: 0;
-  padding: 0 0 30px 0;
-  color: #fff; }
+    text-align: center;
+    margin: 0;
+    padding: 0 0 30px 0;
+    color: #fff;
+}
+
 .uc_page .contents h1 {
-  font-size: 70px;
-  font-weight: 100;
-  line-height: 60px;
-  margin: 0;
-  padding: 0;
-  display: block; }
+    font-size: 70px;
+    font-weight: 100;
+    line-height: 60px;
+    margin: 0;
+    padding: 0;
+    display: block;
+}
+
 .uc_page .contents h2 {
-  margin: 20px 0 40px 0;
-  padding: 0;
-  font-weight: 200;
-  font-size: 40px;
-  line-height: 50px; }
+    margin: 20px 0 40px 0;
+    padding: 0;
+    font-weight: 200;
+    font-size: 40px;
+    line-height: 50px;
+}
+
 .uc_page .contents p {
-  margin: 0;
-  padding: 0;
-  display: block;
-  font-size: 20px;
-  font-weight: 200;
-  line-height: 28px; }
+    margin: 0;
+    padding: 0;
+    display: block;
+    font-size: 20px;
+    font-weight: 200;
+    line-height: 28px;
+}
+
 .uc_page .contents p a {
-  display: block;
-  text-decoration: none;
-  color: #fff; }
+    display: block;
+    text-decoration: none;
+    color: #fff;
+}
+
 .uc_page .contents .ads {
-  margin-top: 5px;
-  font-size: 15px;
-  font-weight: 300; }
+    margin-top: 5px;
+    font-size: 15px;
+    font-weight: 300;
+}
 
 .appoitnment_page {
-  font-family: 'Roboto', sans-serif; }
-  .appoitnment_page .appoinment_page_container {
+    font-family: 'Roboto', sans-serif;
+}
+
+.appoitnment_page .appoinment_page_container {
     display: block;
     margin: 0 auto;
-    width: 600px;
     max-width: 100%;
     padding: 0;
-    padding-top: 80px;
-    padding-bottom: 50px; }
-  .appoitnment_page .title {
-    font-size: 30px;
+    padding-bottom: 50px;
+}
+
+.appoitnment_page .title {
+    font-size: 16px;
     margin: 0;
     padding: 0;
     display: block;
     text-align: center;
     color: #231F20;
     font-family: 'Roboto', sans-serif;
-    font-weight: 400; }
-    .appoitnment_page .title sup {
-      font-size: 12px;
-      font-weight: 300; }
-  .appoitnment_page .form-group {
-    margin-top: 15px; }
-    .appoitnment_page .form-group label {
-      display: block;
-      font-size: 14px;
-      color: #231F20;
-      font-weight: 400;
-      font-family: 'Roboto', sans-serif; }
-    .appoitnment_page .form-group .form-control {
-      height: 40px;
-      border: 1px solid #231F20;
-      border-radius: 4px;
-      margin: 0;
-      color: #231F20;
-      font-size: 14px;
-      font-family: 'Roboto', sans-serif; }
-  .appoitnment_page .btn_submit {
+    font-weight: 700;
+}
+
+.appoitnment_page .title sup {
+    font-size: 11px;
+    font-weight: 400;
+    vertical-align: revert;
+}
+
+.appoitnment_page .form-group {
+    margin-top: 15px;
+}
+
+.appoitnment_page .form-group label {
+    display: block;
+    font-size: 14px;
+    color: #231F20;
+    font-weight: 400;
+    font-family: 'Roboto', sans-serif;
+}
+
+.appoitnment_page .form-group .form-control {
+    height: 40px;
+    border: 1px solid #231F20;
+    border-radius: 4px;
+    margin: 0;
+    color: #231F20;
+    font-size: 14px;
+    font-family: 'Roboto', sans-serif;
+}
+
+.appoitnment_page .btn_submit {
     height: 40px;
     display: block;
     background: #231F20;
@@ -99,39 +128,284 @@ body.uc_page {
     font-family: 'Roboto', sans-serif;
     font-size: 14px;
     font-weight: 400;
-    transition: all .5s; }
-  .appoitnment_page .btn_submit:hover {
-    opacity: .7; }
-  .appoitnment_page .alert.alert-danger {
+    transition: all .5s;
+}
+
+.appoitnment_page .btn_submit:hover {
+    opacity: .7;
+}
+
+.appoitnment_page .alert.alert-danger {
     padding: 4px 10px;
     font-size: 14px;
-    margin: 7px 0; }
+    margin: 7px 0;
+}
 
 .thankyou_page .appoinment_page_container {
-  display: block; }
-  .thankyou_page .appoinment_page_container h2.title {
     display: block;
-    text-transform: uppercase; }
-  .thankyou_page .appoinment_page_container h1.title {
+}
+
+.thankyou_page .appoinment_page_container h2.title {
     display: block;
     text-transform: uppercase;
-    font-size: 77px;
-    line-height: 80px;
-    margin: 40px 0;
-    font-weight: 400; }
-  .thankyou_page .appoinment_page_container p {
+}
+
+.thankyou_page .appoinment_page_container h1.title {
+    display: block;
+    text-transform: uppercase;
+    font-family: 'Roboto', sans-serif;
+    font-size: 47px;
+    line-height: 51px;
+    margin: 14px 0;
+    font-weight: 400;
+}
+
+.thankyou_page .appoinment_page_container p {
     display: block;
     text-align: center;
-    font-size: 24px;
+    font-size: 16px;
     font-weight: 400;
     width: 440px;
     color: #231F20;
     margin: 0 auto;
-    max-width: 100%; }
-  .thankyou_page .appoinment_page_container img {
+    max-width: 100%;
+    font-family: 'Roboto', sans-serif;
+    font-weight: 400;
+    margin-top: 30px;
+}
+
+.thankyou_page .appoinment_page_container img {
     display: block;
     margin: 50px auto 30px auto;
     width: 300px;
-    max-width: 100%; }
+    max-width: 100%;
+}
+
+.thankyou_page {
+    padding-top: 84px;
+    padding-left: 18px;
+    padding-right: 20px;
+    padding-bottom: 46px;
+}
+
 
 /*# sourceMappingURL=style.css.map */
+
+
+/*Start header section*/
+
+#header {
+    background: #231f20;
+}
+
+.logo_section {
+    padding: 20px 0;
+}
+
+.logo_section img {
+    width: 216px;
+}
+
+.appointment_right_site img {
+    height: 420px;
+    max-width: 100%;
+}
+
+.aproment_main_section {
+    padding-top: 100px;
+    padding-bottom: 100px;
+}
+
+.appointment_right_site {
+    padding-top: 24px;
+    padding-left: 53px;
+}
+
+
+/*End header section*/
+
+
+/*Footer section*/
+
+#footer_section {
+    background: url('images/footer_background.png');
+    background-size: 100% 100%;
+    padding-top: 317px;
+    padding-bottom: 40px;
+}
+
+.as_footer_item h2 {
+    color: #fff;
+    font-family: 'Roboto', sans-serif;
+    font-size: 26px;
+    font-weight: 400;
+}
+
+.as_footer_item ul {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    color: #fff;
+    margin-top: 21px;
+}
+
+.as_footer_item ul li {
+    font-size: 16px;
+    font-family: 'Roboto', sans-serif;
+    padding: 6px 0;
+    padding-left: 20px;
+    color: #fff;
+    position: relative;
+    font-weight: 400;
+}
+
+.as_footer_item ul li a {
+    color: #fff;
+    text-decoration: none;
+    font-weight: 400;
+    font-family: 'Roboto', sans-serif;
+    transition: 0.4s all;
+}
+
+.as_footer_item ul li a:hover {
+    opacity: 0.6;
+}
+
+.as_footer_item ul li img {
+    position: absolute;
+    width: 17px;
+    left: 0;
+    top: 10px;
+}
+
+.as_footer_item ul li i.fa {
+    position: absolute;
+    left: 0;
+    top: 9px;
+}
+
+.footer_right_top {
+    padding-top: 10px;
+}
+
+.footer_bottom {
+    border-top: 1px solid #e1e1e1;
+    margin-top: 37px;
+    color: #fff;
+    padding-top: 16px;
+    font-size: 13px;
+    font-family: roboto;
+    font-weight: 300;
+}
+
+.f-b-l-s {
+    text-align: right;
+    padding-right: 50px;
+}
+
+.f-b-r-s {
+    text-align: left;
+    padding-left: 50px;
+}
+
+.footer_logo img {
+    width: 230px;
+}
+
+
+/*End footer section*/
+
+@media(max-width:550px) {
+    .appoitnment_page .form-group label {
+        font-size: 12px;
+    }
+    .logo_section {
+        text-align: center;
+    }
+}
+
+.mobile_show {
+    display: none;
+}
+
+@media(max-width:768px) {
+    .mobile_show {
+        display: block;
+    }
+    .mobile_height {
+        display: none;
+    }
+    .appoitnment_page .appoinment_page_container {
+        padding-bottom: 33px;
+    }
+    .aproment_main_section {
+        padding-top: 42px;
+    }
+    #footer_section {
+        background-image: url('images/mobile_bakc_footer.png');
+        background-size: 100% 100%;
+        background-position: center;
+        background-repeat: no-repeat;
+        padding-top: 93px;
+        padding-bottom: 40px;
+        margin-top: -77px
+    }
+    .as_footer_item h2 {
+        color: #fff;
+        font-family: 'Roboto', sans-serif;
+        font-size: 26px;
+        font-weight: 400;
+    }
+    .as_footer_item {
+        margin-top: 22px;
+    }
+    .as_footer_item ul {
+        margin-top: 0;
+    }
+    .as_footer_item ul li {
+        font-size: 13px;
+        font-weight: 300;
+        padding: 6px 22px;
+    }
+    .footer_logo img {
+        max-width: 238px;
+        margin-top: 10px;
+        margin-bottom: 22px;
+    }
+    .footer_center {
+        text-align: center;
+    }
+    .mobile_aliment {
+        display: inline-block;
+    }
+    .mobile_aliment li {
+        text-align: left;
+    }
+    .f-b-l-s,
+    .f-b-r-s {
+        padding-left: 0;
+        padding-right: 0;
+        text-align: center;
+    }
+    .appointment_right_site {
+        padding-left: 0;
+    }
+}
+
+@media(max-width:1600px) {
+    .as_footer_item ul li {
+        font-size: 14px;
+    }
+}
+
+.schedule_visite {
+    font-size: 40px;
+    text-align: center;
+    margin-bottom: 39px;
+}
+
+.schedule_visite sup {
+    font-size: 16px;
+    font-weight: 400;
+    vertical-align: revert-layer;
+}
